testsuite/poke.pkl/field-init-diag-6.pk
/* { dg-do compile } */

type Foo
  = struct
    {
      int a == 10 : a == 20; /* { dg-error "" } */
    };
